--- a/worker/package.json
+++ b/worker/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" : "tsc -b && node dist/index.js"
+    "dev": "tsc -b && node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "kafkajs": "^2.2.4"
+    "@prisma/client": "^6.14.0",
+    "kafkajs": "^2.2.4",
+    "prisma": "^6.14.0"
   }
 }
