--- a/primary-backend/package.json
+++ b/primary-backend/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.5",
     "prisma": "^6.12.0",
     "zod": "^4.0.11"
   },
@@ -28,6 +29,7 @@
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.0",
+    "@types/nodemailer": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
