--- a/worker/package.json
+++ b/worker/package.json
@@ -12,7 +12,13 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "@solana/web3.js": "^1.98.4",
     "kafkajs": "^2.2.4",
+    "nodemailer": "^7.0.5",
     "prisma": "^6.14.0"
+  },
+  "devDependencies": {
+    "@types/bs58": "^4.0.4",
+    "@types/nodemailer": "^7.0.0"
   }
 }
