--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-otp-input": "^3.1.1",
     "sonner": "^2.0.6"
   },
   "devDependencies": {
